test/compile-fail/resolution/type-existence/bound-is-not-trait/expected.txt
error: expected trait, found type `X`
 --> top.rhdl:2:8
  |
2 | fn a<T: X>() {}
  |         ^ not a trait
